--- a/Public/demo.html
+++ b/Public/demo.html
@@ -27,9 +27,11 @@
    
     <h1>Demo</h1>
 
-    <h2>Bent u benieuwd naar de mogelijkheden van Deccos?</h2>
+    <div id="demo-section">
+        <h2>Benieuwd hoe u impact kunt maken met het sociale intranet van Deccos?</h2>
 
-    <p>Tijdens een kennismakingsgesprek laat ik u graag zien hoe Deccos werkt in levende lijve.</p>
+        <p>Wilt u op uw gemak en real-time zien hoe Deccos kan helpen om alle neuzen dezelfde kant op te krijgen binnen uw organisatie? Op weg naar de doelen die er toe doen.</p>
+    </div>
 
     <footer id="footer">
         <div id=footer-logo-div>
