--- a/Public/demo.html
+++ b/Public/demo.html
@@ -27,11 +27,60 @@
    
     <h1>Demo</h1>
 
-    <div id="demo-section">
+    <!-- <div id="demo-section">
         <h2>Benieuwd hoe u impact kunt maken met het sociale intranet van Deccos?</h2>
 
         <p>Wilt u op uw gemak en real-time zien hoe Deccos kan helpen om alle neuzen dezelfde kant op te krijgen binnen uw organisatie? Op weg naar de doelen die er toe doen.</p>
+    </div> -->
+
+    <div id="work-in-progress-div">
+        <h2>Deccos wordt momenteel gebouwd</h2>
+        <img src="images/design/tool-icon.png" alt="">
+        <p>Wilt u op de hoogte blijven van de ontwikkelingen en straks als eerste aan de slag gaan met Deccos?</p>
+
+        <div id="maillist-form">
+            <p>Schrijf je in voor de nieuwsbrief</p>
+
+           <!-- Begin Mailchimp Signup Form -->
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          </style>
+          <div id="mc_embed_signup">
+          <form action="https://deccos.us6.list-manage.com/subscribe/post?u=1a5e39be4c7ceee4f358fd9c8&amp;id=b2d6788c16" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+          <div class="indicates-required"><span class="asterisk">*</span> verplicht veld</div>
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+          </label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-NAME">Naam  <span class="asterisk">*</span>
+          </label>
+            <input type="text" value="" name="NAME" class="required" id="mce-NAME">
+          </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a5e39be4c7ceee4f358fd9c8_b2d6788c16" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Versturen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+          </form>
+          </div>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='NAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          <!--End mc_embed_signup-->
+
+        </div>
+
+        <p>Of neem contact op met Gijs</p>
+        <img id="photo-gijs" src="images/foto-gijs350.jpg" alt="">
+
+        <button class="button-general"> <a href="contact.html">Neem contact op</a></button>
     </div>
+
+
 
     <footer id="footer">
         <div id=footer-logo-div>
