--- a/Public/index.html
+++ b/Public/index.html
@@ -28,13 +28,30 @@
             </div>
         </ul>
     </nav>
+
+    <nav>
+      <ul id="menu-mobile">
+        <div id="menu-mobile-top">
+          <li> <a href="index.html"><img src="images/DeccosLogoClean.png" height="50px"alt="logo"></a></li>
+          <img id="hamburger-menu" src="images/design/Hamburger-menu-icon-zwart.png" alt="">
+        </div>
+          <div id="menu-items-mobile">
+            <!-- <li>Features</li>
+            <li>Prijs</li> -->
+            <li> <a href="demo.html">Demo</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+            <!-- <li>Over ons</li> -->
+          </div>
+      </ul>
+  </nav>
+
     <section id="header-section">
         <div id="header-text">
                <h1 id="title">Het sociale intranet</h1>
                <h2 id="impact">Met impact</h2>
                <p>Deccos maakt samenwerken en communiceren met collega's en leden leuker en makkelijker dan ooit. 
-                   Met Deccos schaar je iedereen in je organisatie achter dezelfde belangrijke doelen. 
-                   Werk samen toe naar waar het echt om gaat en maak jullie voortgang inzichtelijk voor iedereen.
+                   Met Deccos zet je alle neuzen in je organisatie dezelfde kant op. 
+                   Werk samen toe naar de doelen die belangrijk zijn en maak jullie impact inzichtelijk voor iedereen.
                 </p>
                 <button id="button-header" class="button-general"> <a href="demo.html">Vraag een demo aan</a></button>
         </div>
@@ -179,35 +196,35 @@
             <p>Schrijf je in voor de nieuwsbrief</p>
 
            <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-</style>
-<div id="mc_embed_signup">
-<form action="https://deccos.us6.list-manage.com/subscribe/post?u=1a5e39be4c7ceee4f358fd9c8&amp;id=b2d6788c16" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-<div class="indicates-required"><span class="asterisk">*</span> verplicht veld</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-	<label for="mce-NAME">Naam  <span class="asterisk">*</span>
-</label>
-	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a5e39be4c7ceee4f358fd9c8_b2d6788c16" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Versturen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='NAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+          <style type="text/css">
+            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          </style>
+          <div id="mc_embed_signup">
+          <form action="https://deccos.us6.list-manage.com/subscribe/post?u=1a5e39be4c7ceee4f358fd9c8&amp;id=b2d6788c16" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+          <div class="indicates-required"><span class="asterisk">*</span> verplicht veld</div>
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+          </label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-NAME">Naam  <span class="asterisk">*</span>
+          </label>
+            <input type="text" value="" name="NAME" class="required" id="mce-NAME">
+          </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a5e39be4c7ceee4f358fd9c8_b2d6788c16" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Versturen" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+          </form>
+          </div>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='NAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+          <!--End mc_embed_signup-->
 
         </div>
 
@@ -222,7 +239,7 @@
         <div class="highlight-div" id="your-cluhouse-div">
 
             <div class="highlights-inner-div">
-                <img src="images/design/ipad-horizontal.png" alt="">
+                <img src="images/ipad.png" alt="">
 
                 <div>
                     <h1>Social intranet</h1>
@@ -254,15 +271,16 @@
                         <li>Medewerkers en leden kunnen zich <b>inschrijven</b> voor evenementen</li>
                     </ul>
                 </div>
-
-                <img src="images/design/iphone-horizontal.png" alt="">
+                <div class="image-div">
+                  <img id="iphone-horizontal-image" src="images/iphone-horizontal.png" alt="">
+                </div>
             </div>
 
         </div>
 
         <div class="highlight-div" id="why-deccos-div">
             <div class="highlights-inner-div">
-                <img src="images/design/laptop-icon.png" alt="">
+                <img src="images/laptop.png" alt="">
 
                 <div>
                     <h1>Impact</h1>
