--- a/Public/index.html
+++ b/Public/index.html
@@ -7,16 +7,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta id="meta-keywords" name="keywords" content="online community, impact, maatschappelijk impact"/>
+    <meta id="meta-description" property="og:description" name="description" content="Creeer een online community met impact">
+    <meta id="facebook-url" property="og:url" content="www.deccos.nl"/>
+    <meta property="og:type"  content="website"/>
+    <meta id="facebook-title" property="og:title" content="Creeer een online community met impact"/>
+    <meta id="facebook-description" property="og:description" content="Creeer een online community met impact"/>
+    <meta id="facebook-img" property="og:image" content="https://firebasestorage.googleapis.com/v0/b/deccos-af9fd.appspot.com/o/undraw_Having_fun_re_vj4h%20(1).png?alt=media&token=4863d8f9-1bbf-4b1d-9da7-7cb7b5f6768a"/>
+    <title id="page-title" property="og:title">Creeer een online community met impact</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Raleway&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/design/favicon.ico">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MDVJ86HMJ9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MDVJ86HMJ9');
+    </script>
     <title>Deccos</title>
 </head>
 <body>
     <nav>
         <ul id="menu">
-            <li> <a href="index.html"><img src="images/DeccosLogoClean.png" height="50px"alt="logo"></a></li>
+            <li> <a href="index.html"><img class="logo-menu" src="images/design/logo.png" alt="logo Deccos"></a></li>
             <div id="menu-items">
                 <div id="menu-items">
                     <!-- <li>Features</li>
@@ -32,7 +49,7 @@
     <nav>
       <ul id="menu-mobile">
         <div id="menu-mobile-top">
-          <li> <a href="index.html"><img src="images/DeccosLogoClean.png" height="50px"alt="logo"></a></li>
+          <li> <a href="index.html"><img class="logo-menu-mobile" src="images/design/logo.png" alt="logo Deccos"></a></li>
           <img id="hamburger-menu" src="images/design/Hamburger-menu-icon-zwart.png" alt="">
         </div>
           <div id="menu-items-mobile">
@@ -47,11 +64,11 @@
 
     <section id="header-section">
         <div id="header-text">
-               <h1 id="title">Het sociale intranet</h1>
-               <h2 id="impact">Met impact</h2>
-               <p>Deccos maakt samenwerken en communiceren met collega's en leden leuker en makkelijker dan ooit. 
+               <h1 id="title">Creeer een online community</h1>
+               <h2 id="impact">met impact</h2>
+               <p>Deccos maakt samenwerken en communiceren met collega's, leden, vrijwilligers en/of deelnemers leuker en makkelijker dan ooit. 
                    Met Deccos zet je alle neuzen in je organisatie dezelfde kant op. 
-                   Werk samen toe naar de doelen die belangrijk zijn en maak jullie impact inzichtelijk voor iedereen.
+                   Werk samen toe naar een inspirerende toekomst. Voor je organisatie en de maatschappij.
                 </p>
                 <button id="button-header" class="button-general"> <a href="demo.html">Vraag een demo aan</a></button>
         </div>
@@ -183,7 +200,7 @@
 
     <section id="CTA-section">
 
-        <h1>Zet alle neuzen dezelfde kant op binnen je organisatie</h1>
+        <h1>Draai alle neuzen richting een inspirerende toekomst. <br> Voor je organisatie en de maatschappij.</h1>
 
         <div id="under-construction-div">
             <img id="tool-icon" src="images/design/tool-icon.png" alt="">
@@ -238,16 +255,16 @@
     <section>
         <div class="highlight-div" id="your-cluhouse-div">
 
-            <div class="highlights-inner-div">
+            <div class="highlights-inner-div" id="community-inner-div">
                 <img src="images/ipad.png" alt="">
 
                 <div>
-                    <h1>Social intranet</h1>
+                    <h1>Online community</h1>
                     <ul>
-                        <li>Een online werkomgeving alleen <b>toegankelijk voor medewerkers of leden</b></li>
-                        <li>In jullie <b>eigen huisstijl</b></li>
+                        <li>Een online communityomgeving in jullie <b>eigen huisstijl</b></li>
                         <li>Rechtstreeks gekoppeld aan <b>jullie website</b></li>
                         <li><b>Aanpasbaar</b> naar je eigen wensen en behoeften</li>
+                        <li>Werk samen met <b>medewerkers, leden, vrijwilligers en/of deelnemers</b></li>
                     </ul>
                 </div>
             </div>
@@ -278,40 +295,56 @@
 
         </div>
 
-        <div class="highlight-div" id="why-deccos-div">
-            <div class="highlights-inner-div">
+        <div class="highlight-div" id="impact-div">
+            <div class="highlights-inner-div" id="impact-inner-div">
                 <img src="images/laptop.png" alt="">
 
                 <div>
-                    <h1>Impact</h1>
+                    <h1>Creeer impact</h1>
                     <ul>
                         <li>Zet alle <b>neuzen dezelfde kant</b> op binnen je organisatie</li>
                         <li>Formuleer <b>organisatiebrede (maatschappelijke) doelen</b></li>
                         <li><b>Meet de voortgang</b> van jullie doelen</li>
-                        <li>Medewerkers en leden kunnen <b>bijdragen aan de doelen</b></li>
+                        <li>Medewerkers, leden, vrijwilligers en deelnemers kunnen <b>bijdragen aan de doelen</b></li>
                         <li>Automatische en continue <b>up-to-date rapportage</b> van doelen</li>
                     </ul>
                 </div>
             </div>
+        </div>
 
-            <div id="CTA-bottom">
-                <h1>Ik wil een demo!</h1>
-                <p>Ben je benieuwd naar Deccos en wil je even binnen kijken? 
-                    Geen probleem. Wanneer je ons een demo-verzoek stuurt ontvang je direct een toegangscode 
-                    waarmee je even op je gemak rond kunt kijken.
-                </p>
+        <div class="highlight-div" id="why-deccos-div">
+          <div class="highlights-inner-div" id="why-deccos-inner-div">
+              <div>
+                  <h1>Waarom Deccos</h1>
+                  <ul>
+                      <li>Focus op <b>(maatschappelijke) doelen</b></li>
+                      <li>Volledig <b>in de cloud</b> (dus altijd up-to-date)</li>
+                      <li>Continue <b>doorontwikkeling</b></li>
+                      <li>Data wordt <b>nooit verkocht</b> aan derden</li>
+                  </ul>
+              </div>
+              <div class="image-div">
+               <img src="images/design/iphone-why-deccos.png" alt="">
+              </div>
+          </div>
+      </div>
+        
+        <div id="CTA-bottom">
+          <h1>Ik wil een demo!</h1>
+          <p>Ben je benieuwd naar Deccos en wil je even binnen kijken? 
+              Geen probleem. Wanneer je ons een demo-verzoek stuurt ontvang je direct een toegangscode 
+              waarmee je even op je gemak rond kunt kijken.
+          </p>
 
-                <button id="button-cta-bottom" class="button-general"><a href="demo.html">Demo aanvragen</a></button>
-
-            </div>
-            
+          <button id="button-cta-bottom" class="button-general"><a href="demo.html">Demo aanvragen</a></button>
 
         </div>
+
     </section>
 
     <footer id="footer">
         <div id=footer-logo-div>
-            <img src="images/DeccosLogoClean.png" alt="">
+            <img src="images/design/logo.png" alt="">
         </div>
         <div id="footer-contact-div">
             <h2>Contact</h2>
