--- a/Public/contact.html
+++ b/Public/contact.html
@@ -21,6 +21,7 @@
                     <li>Prijs</li> -->
                     <li> <a href="demo.html">Demo</a></li>
                     <li> <a href="contact.html">Contact</a></li>
+                    <li> <a href="blog.html">Blog</a></li>
                     <!-- <li>Over ons</li> -->
                 </div>
             </div>
@@ -38,6 +39,7 @@
             <li>Prijs</li> -->
             <li> <a href="demo.html">Demo</a></li>
             <li> <a href="contact.html">Contact</a></li>
+            <li> <a href="blog.html">Blog</a></li>
             <!-- <li>Over ons</li> -->
           </div>
       </ul>
